--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.0.1",
   "description": "generate hamiltonian cycle gifs",
   "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zaccolley/hamiltonian.git"
+  },
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "canvas": "^1.6.6",
+    "color-generator": "^0.1.0",
+    "dotenv": "^5.0.1",
     "express": "^4.15.4",
     "gifencoder": "^1.1.0",
-    "twitter": "^1.7.1",
-    "color-generator": "^0.1.0"
+    "twitter": "^1.7.1"
   },
   "engines": {
     "node": "6.9.1"
