--- a/package.json
+++ b/package.json
@@ -3,20 +3,16 @@
   "version": "0.0.1",
   "description": "generate hamiltonian cycle gifs",
   "main": "server.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/zaccolley/hamiltonian.git"
-  },
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "canvas": "^1.6.6",
-    "color-generator": "^0.1.0",
-    "dotenv": "^5.0.1",
-    "express": "^4.15.4",
+    "canvas": "^1.6.11",
+    "express": "^4.16.3",
     "gifencoder": "^1.1.0",
-    "twitter": "^1.7.1"
+    "mastodon-api": "^1.3.0",
+    "node-fetch": "^2.2.0",
+    "hex-rgb": "^3.0.0"
   },
   "engines": {
     "node": "6.9.1"
